Add terraform code to provision iaas for java, jenkins and python 	modified:   .gitignore 	modified:   simplilearn-phase1/terraformisation/main.tf

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 .DS_Store
+simplilearn-phase1/terraformisation/.terraform.lock.hcl
+simplilearn-phase1/terraformisation/.terraform.tfstate.lock.info
+simplilearn-phase1/terraformisation/.terraform/
+simplilearn-phase1/terraformisation/terraform.tfstate
+simplilearn-phase1/terraformisation/terraform.tfstate.backup
