Add config changes to Dockerfile to optimise config 	renamed:    simplilearn-phase1/deployangulardocker(Project-4)/Dockerfile -> simplilearn-phase1/deployangulardocker(Project-4)/baseconfiguration/Dockerfile 	modified:   simplilearn-phase1/deployangulardocker(Project-4)/docker-compose.yml 	new file:   simplilearn-phase1/deployangulardocker(Project-4)/readme.md 	new file:   simplilearn-phase1/deployangulardocker(Project-4)/web/Dockerfile

--- a/simplilearn-phase1/deployangulardocker(Project-4)/docker-compose.yml
+++ b/simplilearn-phase1/deployangulardocker(Project-4)/docker-compose.yml
@@ -5,7 +5,7 @@ services:
             args:
                 version: 0.0.1
             context: .
-            dockerfile: Dockerfile
+            dockerfile: web/Dockerfile
         expose:
             - 4200
         ports:
