Rewrite changes in playbook 	modified:   simplilearn-phase2/playbook.yml

--- a/simplilearn-phase2/playbook.yml
+++ b/simplilearn-phase2/playbook.yml
@@ -36,10 +36,10 @@
       notify: Reload Apache
       tags: [ apache ]
 
-    # - name: Enable rewrite module
-    #   shell: /usr/sbin/a2enmod rewrite
-    #   notify: Reload Apache
-    #   tags: [ apache ]
+    - name: Enable rewrite module
+      shell: /usr/sbin/a2enmod rewrite
+      notify: Reload Apache
+      tags: [ apache ]
 
     # - name: Enable new site
     #   shell: /usr/sbin/a2ensite {{ http_conf }}
