--- a/simplilearn-phase2/playbook.yml
+++ b/simplilearn-phase2/playbook.yml
@@ -59,7 +59,7 @@
         login_password: "{{ mysql_root_password }}"
         # name: root
         # password: "{{ mysql_root_password }}"
-        # login_unix_socket: /var/run/mysqld/mysqld.sock
+        login_unix_socket: /var/run/mysqld/mysqld.sock
         state: present
       tags: [ mysql, mysql-root ]
 
