--- a/simplilearn-phase2/playbook.yml
+++ b/simplilearn-phase2/playbook.yml
@@ -41,15 +41,15 @@
       notify: Reload Apache
       tags: [ apache ]
 
-    # - name: Enable new site
-    #   shell: /usr/sbin/a2ensite {{ http_conf }}
-    #   notify: Reload Apache
-    #   tags: [ apache ]
+    - name: Enable new site
+      shell: /usr/sbin/a2ensite {{ http_conf }}
+      notify: Reload Apache
+      tags: [ apache ]
 
-    # - name: Disable default Apache site
-    #   shell: /usr/sbin/a2dissite 000-default.conf
-    #   notify: Restart Apache
-    #   tags: [ apache ]
+    - name: Disable default Apache site
+      shell: /usr/sbin/a2dissite 000-default.conf
+      notify: Restart Apache
+      tags: [ apache ]
 
   # MySQL Configuration
     - name: Set the root password
