--- a/simplilearn-phase2/vars/default.yml
+++ b/simplilearn-phase2/vars/default.yml
@@ -1,6 +1,21 @@
 ---
 #System Settings
-php_modules: [ 'php-curl', 'php-gd', 'php-mbstring', 'php-xml', 'php-xmlrpc', 'php-soap', 'php-intl', 'php-zip' ]
+php_modules: [
+  'libapache2-mod-php', 
+  'php-json',
+  'php-curl', 
+  'php-gd', 
+  'php-mbstring', 
+  'php-xml', 
+  'php-xmlrpc', 
+  'php-soap', 
+  'php-intl', 
+  'php-zip',
+  'php-bcmath',
+  'php-curl',
+  'php-imagick',
+  'php-mysql' 
+]
 
 #MySQL Settings
 mysql_root_password: "corefinder"
