--- a/simplilearn-phase2/ansible_project/inventory.ini
+++ b/simplilearn-phase2/ansible_project/inventory.ini
@@ -1,5 +1,5 @@
 [servers]
-server1 ansible_host=127.0.0.1
+server1 ansible_host=127.0.0.1 ansible_port=42006
 
 [all:vars]
-ansible_python_interpreter=/usr/bin/python3
+ansible_python_interpreter=/usr/bin/python
