--- a/simplilearn-phase2/ansible_project/playbook.yml
+++ b/simplilearn-phase2/ansible_project/playbook.yml
@@ -11,7 +11,7 @@
 
     - name: Install LAMP Packages
       apt: name={{ item }} update_cache=yes state=latest
-      loop: [ 'apache2', 'mysql-server', 'php' ]
+      loop: [ 'apache2', 'mysql-server', 'php', 'python3-pymysql' ]
       tags: [ system ]
 
     - name: Install PHP Extensions
@@ -56,6 +56,7 @@
         password: "{{ mysql_root_password }}"
         login_unix_socket: /var/run/mysqld/mysqld.sock
         state: present
+      no_log: true
       tags: [ mysql, mysql-root ]
 
     - name: Remove all anonymous user accounts
@@ -65,6 +66,7 @@
         state: absent
         login_user: root
         login_password: "{{ mysql_root_password }}"
+      no_log: true
       tags: [ mysql ]
 
     - name: Remove the MySQL test database
@@ -112,11 +114,11 @@
       tags: [ wordpress ]
 
     - name: Set permissions for directories
-      shell: "/usr/bin/find /srv/www/wordpress/ -type d -exec chmod 750 {} \\;"
+      shell: "/usr/bin/find /srv/www/wordpress/ -type d -exec chmod 777 {} \\;"
       tags: [ wordpress ]
 
     - name: Set permissions for files
-      shell: "/usr/bin/find /srv/www/wordpress/ -type f -exec chmod 640 {} \\;"
+      shell: "/usr/bin/find /srv/www/wordpress/ -type f -exec chmod 777 {} \\;"
       tags: [ wordpress ]
 
     - name: Set up wp config
