change path for directory

--- a/simplilearn-phase2/ansible_project/playbook.yml
+++ b/simplilearn-phase2/ansible_project/playbook.yml
@@ -99,7 +99,7 @@
     - name: Download and unpack latest WordPress
       unarchive:
         src: https://wordpress.org/latest.tar.gz
-        dest: "/srv/www"
+        dest: "/srv/www/wordpress/"
         remote_src: yes
         creates: "/srv/www/wordpress"
       tags: [ wordpress ]
