--- a/simplilearn-phase2/ansible_project/playbook.yml
+++ b/simplilearn-phase2/ansible_project/playbook.yml
@@ -52,12 +52,11 @@
       tags: [ apache ]
 
   # MySQL Configuration
-    - name: Set the root password
+    - name: Set the root password for database
       mysql_user:
         name: root
         password: "{{ mysql_root_password }}"
         login_unix_socket: /var/run/mysqld/mysqld.sock
-      no_log: true
       tags: [ mysql, mysql-root ]
 
     - name: Remove all anonymous user accounts
@@ -67,7 +66,6 @@
         state: absent
         login_user: root
         login_password: "{{ mysql_root_password }}"
-      no_log: true
       tags: [ mysql ]
 
     - name: Remove the MySQL test database
@@ -84,7 +82,6 @@
         state: present
         login_user: root
         login_password: "{{ mysql_root_password }}"
-      no_log: true
       tags: [ mysql ]
 
     - name: Create MySQL user for WordPress
