--- a/simplilearn-phase2/ansible_project/playbook.yml
+++ b/simplilearn-phase2/ansible_project/playbook.yml
@@ -54,9 +54,13 @@
   # MySQL Configuration
     - name: Set the root password for database
       mysql_user:
+        login_host: "localhost"
+        login_user: "root"
+        login_password: "{{ mysql_root_password }}"
         name: root
         password: "{{ mysql_root_password }}"
         login_unix_socket: /var/run/mysqld/mysqld.sock
+        state: present
       tags: [ mysql, mysql-root ]
 
     - name: Remove all anonymous user accounts
