Adding in dockerfile for building the app

--- a/capstone/flask-weather-app/Dockerfile
+++ b/capstone/flask-weather-app/Dockerfile
@@ -7,3 +7,8 @@ COPY . flask-weather-app/
 
 # Install python deps from requirements.txt
 RUN pip install -r flask-weather-app/requirements.txt
+
+WORKDIR flask-weather-app
+
+# Run flask app
+ENTRYPOINT python3 app.py
