--- a/capstone/flask-weather-app/Dockerfile
+++ b/capstone/flask-weather-app/Dockerfile
@@ -8,7 +8,7 @@ COPY . flask-weather-app/
 # Install python deps from requirements.txt
 RUN pip install -r flask-weather-app/requirements.txt
 
-WORKDIR flask-weather-app
+WORKDIR /flask-weather-app
 
 # Run flask app
 ENTRYPOINT python3 app.py
