add network and change deployment script

--- a/capstone/flask-weather-app/docker-compose.yml
+++ b/capstone/flask-weather-app/docker-compose.yml
@@ -3,4 +3,7 @@ services:
   web:
     build: .
     ports:
-      - "$(echo ${server_ip}):5000:5000"
+      - "5000:5000"
+networks:
+  bridge2:
+    external: true
