--- a/capstone/flask-weather-app/docker-compose.yml
+++ b/capstone/flask-weather-app/docker-compose.yml
@@ -5,3 +5,7 @@ services:
     ports:
       - "0.0.0.0:5000:5000"
     network_mode: "bridge"
+  test:
+    build:
+      context: .
+      dockerfile: tests/Dockerfile
